Fixed header z-index issues + updated one page love banner to svg

--- a/wp-content/themes/lrc/src/css/style.scss
+++ b/wp-content/themes/lrc/src/css/style.scss
@@ -126,6 +126,7 @@ input[type="submit"] {
 header.main {
 	margin-top: 24px;
 	margin-bottom: var(--space-4);
+	z-index: 100;
 
 	.wrapper {
 		align-items: center;
@@ -606,7 +607,8 @@ header.main {
 .opl {
   position: fixed;
   top: 100px;
-  left: 0;
+	//left: 0;
+	right: 0;
 	z-index: 99999;
 	
 	a {
@@ -614,7 +616,7 @@ header.main {
 		height: 56px;
 		text-indent: -9999px;
 		display: block;
-		background: url('https://s3.amazonaws.com/onepagelove/one-page-love-award.png') no-repeat;
+		background: url('https://s3.amazonaws.com/onepagelove/one-page-love-award-ribbon-right.svg') no-repeat;
 	}
 }
 
